Fixing OpenShift capitalization

--- a/layouts/partials/rhds/nav.html
+++ b/layouts/partials/rhds/nav.html
@@ -4,7 +4,7 @@
   </a>
   <ul slot="nav" aria-labelledby="logo-id">
     <li>
-      <a href="/experts/rosa/" slot="link">Red Hat Openshift Service on AWS</a>
+      <a href="/experts/rosa/" slot="link">Red Hat OpenShift Service on AWS</a>
     </li>
     <li>
       <a href="/experts/aro/" slot="link">Azure Red Hat OpenShift</a>
