Adding last breadcrumb as a non-link for clarity

--- a/themes/rhds/layouts/partials/breadcrumbs.html
+++ b/themes/rhds/layouts/partials/breadcrumbs.html
@@ -2,5 +2,5 @@
   {{- range .Ancestors.Reverse }}
       <li class="breadcrumb"><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
   {{- end }}
-<li class="breadcrumb"><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+  <li class="breadcrumb">{{ .Title }}</li>
 </ul>
