Updating tags and collaborate banner

--- a/themes/rhds/layouts/partials/collaborate.html
+++ b/themes/rhds/layouts/partials/collaborate.html
@@ -1,9 +1,8 @@
   <rh-context-provider color-palette="dark">
     <section class="collaborate">
       <div class="container">
-        <h2>Are you a Managed OpenShift Black Belt?</h2>
-        <p>Eureka moments don't drive progress. Collaboration drives progress. It always has and always will.</p>
-        <p>Help improve our documentation <a href="https://www.redhat.com/en/open-source/red-hat-way">The Red Hat Way</a>.</p>
+        <h2>Interested in contributing to these docs?</h2>
+        <p>Collaboration drives progress. Help improve our documentation <a href="https://www.redhat.com/en/open-source/red-hat-way">The Red Hat Way</a>.</p>
         <div class="cta-group">
           <rh-cta variant="brick"><pf-icon set="fab" icon="github"></pf-icon> <a href="https://github.com/rh-mobb/documentation">GitHub</a></rh-cta>
           {{- if .Site.Params.editURL }}
