Adding canonical link to meta head

--- a/themes/rhds/layouts/partials/head/meta.html
+++ b/themes/rhds/layouts/partials/head/meta.html
@@ -4,3 +4,4 @@
 {{- with .Site.Params.author }}
 <meta name="author" content="{{ . }}">
 {{- end }}
+<link rel="canonical" href="https://cloud.redhat.com{{ .RelPermalink }}">
