Updating header to cloud.redhat.com

--- a/layouts/partials/rhds/header.html
+++ b/layouts/partials/rhds/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo">
-    <a href="https://redhat.com/">
+    <a href="https://cloud.redhat.com/">
       <img src="{{ "images/logo--on-dark.svg" | relURL }}" width="169" height="40" alt="Red Hat logo" />
     </a>
   </div>
