Draft eddl events pls & plc

--- a/themes/rhds/layouts/_default/baseof.html
+++ b/themes/rhds/layouts/_default/baseof.html
@@ -12,5 +12,6 @@
   </main>
   {{ partial "collaborate.html" . }}
   {{ partial "rhds/footer.html" .}}
+  {{ partial "eddl/page-load-complete.html" . }}
 </body>
 </html>
