--- a/themes/rhds/layouts/partials/head.html
+++ b/themes/rhds/layouts/partials/head.html
@@ -1,6 +1,7 @@
 {{ partial "head/meta.html" .}}
 {{ partial "head/favicon.html" .}}
 {{ partial "head/tracking.html" .}}
+{{ partial "eddl/page-load-started.html" .}}
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partial "head/fonts.html" .}}
 {{ partialCached "head/css.html" . }}
