Enable trustarc cookie consent "teconsent" in the footer for preferences.

--- a/layouts/partials/rhds/footer.html
+++ b/layouts/partials/rhds/footer.html
@@ -70,8 +70,7 @@
       <li><a href="https://redhat.com/en/about/terms-use" data-analytics-category="Footer|Red Hat legal and privacy links" data-analytics-text="Terms of use">Terms of use</a></li>
       <li><a href="https://redhat.com/en/about/all-policies-guidelines" data-analytics-category="Footer|Red Hat legal and privacy links" data-analytics-text="All policies and guidelines">All policies and guidelines</a></li>
       <li><a href="https://redhat.com/en/about/digital-accessibility" data-analytics-category="Footer|Red Hat legal and privacy links" data-analytics-text="Digital accessibility" class="active">Digital accessibility</a></li>
-      <!-- If your website supports trustarc include this item to add Cookie Preferences to your site. -->
-      <!-- <li><span id="teconsent"> </span></li> -->
+      <li><span id="teconsent"> </span></li>
     </ul>
   </rh-footer-universal>
 </rh-footer>
