--- a/themes/rhds/layouts/partials/head/tracking.html
+++ b/themes/rhds/layouts/partials/head/tracking.html
@@ -1,2 +1,2 @@
-<script src="//static.redhat.com/libs/redhat/marketing/latest/trustarc/trustarc.js"></script>
+<script id="trustarc" src="//static.redhat.com/libs/redhat/marketing/latest/trustarc/trustarc.js"></script>
 <script src="//www.redhat.com/dtm.js"></script>
