--- a/themes/rhds/layouts/partials/head/js.html
+++ b/themes/rhds/layouts/partials/head/js.html
@@ -1,4 +1,65 @@
- <script type="module" src="/experts/js/rhds/bundle.js"></script>
+
+{{- if eq hugo.Environment "development" }}
+<!--
+  Dev environment does not work with redhatstatic due to CORS, switch to JSPM 
+-->
+<script type="importmap">
+  {
+    "imports": {
+      "@rhds/elements/": "https://ga.jspm.io/npm:@rhds/elements@1.3.0/elements/",    
+      "@patternfly/elements/": "https://ga.jspm.io/npm:@patternfly/elements@2.2.2/",
+      "@patternfly/icons/": "https://ga.jspm.io/npm:@patternfly/icons@1.0.2/",
+      "@rhds/elements/lib/": "https://ga.jspm.io/npm:@rhds/elements@1.3.0/lib/"
+    },
+    "scopes": {
+      "https://ga.jspm.io/": {
+        "@floating-ui/core": "https://ga.jspm.io/npm:@floating-ui/core@1.6.8/dist/floating-ui.core.mjs",
+        "@floating-ui/dom": "https://ga.jspm.io/npm:@floating-ui/dom@1.6.12/dist/floating-ui.dom.mjs",
+        "@floating-ui/utils": "https://ga.jspm.io/npm:@floating-ui/utils@0.2.8/dist/floating-ui.utils.mjs",
+        "@floating-ui/utils/dom": "https://ga.jspm.io/npm:@floating-ui/utils@0.2.8/dist/floating-ui.utils.dom.mjs",
+        "@lit/reactive-element": "https://ga.jspm.io/npm:@lit/reactive-element@1.6.3/development/reactive-element.js",
+        "@lit/reactive-element/decorators/": "https://ga.jspm.io/npm:@lit/reactive-element@1.6.3/development/decorators/",
+        "lit": "https://ga.jspm.io/npm:lit@2.6.1/index.js",
+        "lit-element/lit-element.js": "https://ga.jspm.io/npm:lit-element@3.3.3/development/lit-element.js",
+        "lit-html": "https://ga.jspm.io/npm:lit-html@2.8.0/development/lit-html.js",
+        "lit-html/": "https://ga.jspm.io/npm:lit-html@2.8.0/development/",
+        "lit/": "https://ga.jspm.io/npm:lit@2.6.1/",
+        "tslib": "https://ga.jspm.io/npm:tslib@2.8.1/tslib.es6.mjs",
+        "@rhds/elements/": "https://ga.jspm.io/npm:@rhds/elements@1.3.0/elements/",    
+        "@patternfly/elements/": "https://ga.jspm.io/npm:@patternfly/elements@2.2.0/",
+        "@patternfly/pfe-core": "https://ga.jspm.io/npm:@patternfly/pfe-core@2.4.1/core.js",
+        "@patternfly/pfe-core/": "https://ga.jspm.io/npm:@patternfly/pfe-core@2.4.1/",
+        "@patternfly/icons/": "https://ga.jspm.io/npm:@patternfly/icons@1.0.2/",
+        "@rhds/elements/lib/": "https://ga.jspm.io/npm:@rhds/elements@1.4.1/lib/",
+        "@rhds/tokens/media.js": "https://ga.jspm.io/npm:@rhds/tokens@2.1.1/js/media.js",
+        "@lit/context": "https://ga.jspm.io/npm:@lit/context@1.1.3/development/index.js"
+      }
+    }
+  }
+</script>
+{{- else }}
+  <script type="importmap">
+  {
+    "imports": {
+      "@patternfly/elements/" : "https://www.redhatstatic.com/dx/v1-alpha/@patternfly/elements@2.2.2/",
+      "@rhds/elements/":"https://www.redhatstatic.com/dx/v1-alpha/@rhds/elements@1.3.0/elements/",
+      "@rhds/elements/lib/":"https://www.redhatstatic.com/dx/v1-alpha/@rhds/elements@1.3.0/lib/",
+      "@patternfly/icons/": "https://www.redhatstatic.com/dx/v1-alpha/@patternfly/icons@1.0.2/"
+    }
+  }
+  </script>
+{{- end }}
+
+<script type="module">
+  import '@rhds/elements/rh-navigation-secondary/rh-navigation-secondary.js';
+  import '@rhds/elements/rh-footer/rh-footer.js';
+  import '@rhds/elements/rh-cta/rh-cta.js';
+  import '@rhds/elements/rh-alert/rh-alert.js';
+  import '@rhds/elements/rh-tag/rh-tag.js';
+
+  import '@patternfly/elements/pf-tooltip/pf-tooltip.js';
+  import '@patternfly/elements/pf-button/pf-button.js';
+</script>
 
 {{- with resources.Get "js/main.js" }}
   {{- if eq hugo.Environment "development" }}
