--- a/themes/rhds/layouts/partials/head/css.html
+++ b/themes/rhds/layouts/partials/head/css.html
@@ -1,11 +1,14 @@
-<link rel="stylesheet" href="/experts/css/rhds/rh-navigation-secondary-lightdom.css">
-<link rel="stylesheet" href="/experts/css/rhds/rh-footer-lightdom.css">
+
 
 {{- with resources.Get "css/main.css" }}
   {{- if not hugo.IsProduction }}
+<link rel="stylesheet" href="https://ga.jspm.io/npm:@rhds/elements@1.3.0/elements/rh-navigation-secondary/rh-navigation-secondary-lightdom.css">
+<link rel="stylesheet" href="https://ga.jspm.io/npm:@rhds/elements@1.3.0/elements/rh-footer/rh-footer-lightdom.css">
 <link rel="stylesheet" href="{{ .RelPermalink }}">
   {{- else }}
     {{- with . | minify | fingerprint }}
+<link rel="stylesheet" href="https://www.redhatstatic.com/dx/v1-alpha/@rhds/elements@1.3.0/elements/rh-navigation-secondary/rh-navigation-secondary-lightdom.css">
+<link rel="stylesheet" href="https://www.redhatstatic.com/dx/v1-alpha/@rhds/elements@1.3.0/elements/rh-footer/rh-footer-lightdom.css">    
 <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
     {{- end }}
   {{- end }}
