--- a/themes/rhds/layouts/partials/head/importmap.html
+++ b/themes/rhds/layouts/partials/head/importmap.html
@@ -48,5 +48,5 @@
     }
   }
   </script>
-  <script async src="https://www.redhatstatic.com/dx/v1-alpha/es-module-shims@1.7.3/dist/es-module-shims.js" crossorigin="anonymous"></script>
+  <script async src="https://www.redhatstatic.com/dx/v1-alpha/es-module-shims@1.7.3.js" crossorigin="anonymous"></script>
 {{- end }}
